[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libra-toolbox"
authors = [
    {name = "Remi Delaporte-Mathurin", email = "remidm@mit.edu"},
]
description = "Design and analysis tools for LIBRA project"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dynamic = ["version"]
dependencies = ["numpy", "pint", "scipy", "matplotlib"]

[project.optional-dependencies]
tests = ["pytest>=5.4.3"]

[tool.setuptools_scm]
write_to = "libra_toolbox/_version.py"